# social-listening

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  render.yaml  requirements.txt
app/: config.py  main.py
app/api/: events.py  metrics.py  seed.py
app/db/: session.py
app/engine/: clustering.py  event_matcher.py  long_term.py  severity.py  short_term.py
app/geo/: classifier.py  mappings.py
app/models/: __init__.py  document.py  event.py  event_doc.py  metrics.py
app/pipeline/: analysis.py  embedding.py  ingestion.py  reddit.py  text_clean.py
app/scheduler/: jobs.py
app/schemas/: event.py  metrics.py
app/static/: dashboard.html
tests/: test_geo_classifier.py  test_severity.py  test_text_clean.py
